syntax="proto3";
package pmongo;

option go_package = "github.com/viamrobotics/mongo-go-driver-protobuf/pmongo";

message ObjectId{
    string value = 1;
}
